# docs/swagger.json
@@ -47,16 +47,10 @@
         "model.GitHubRepoInfo": {
             "type": "object",
             "properties": {
-                "created": {
-                    "type": "string"
-                },
                 "forks": {
                     "type": "integer"
                 },
                 "lastCommit": {
-                    "type": "string"
-                },
-                "modified": {
                     "type": "string"
                 },
                 "owner": {
