# domain/model/md_file.go
@@ -1,0 +1,18 @@
+package model
+
+import "time"
+
+type JobStatus int
+
+const (
+	Ready JobStatus = iota
+	Process
+	Done
+)
+
+type MdFile struct {
+	Created  time.Time `json:"-"`
+	Modified time.Time `json:"-"`
+	Url      string    `gorm:"primaryKey"`
+	Status   JobStatus
+}
